fix modal double scrollbar

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
     background: #F5F5F5;
-    margin: 0% 20%; /* to be replaced */
+    margin: 0% 20%;
     font-family: 'Nunito', 'Roboto', sans-serif;
 }
 header {
@@ -139,7 +139,7 @@ h2 {
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
+    width:  100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
@@ -150,7 +150,8 @@ h2 {
   .modal-content {
     background: #778899;
     color: #F5F5F5;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: auto; /* centered */
+    margin-top: 3%;
     padding: 20px;
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
@@ -215,8 +216,6 @@ h4 {
   /* The container <div> - needed to position the dropdown content */
  /* Dropdown Button */
  .dropbtn {
-   /*background-color: #04AA6D;
-    color: white;*/
     padding: 16px;
     font-size: 16px;
     border: none;
@@ -252,6 +251,3 @@ h4 {
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  /*.dropdown:hover .dropbtn {background-color: #3e8e41;} */
